# devig

./: LICENSE  README.md  pyproject.toml  tests.py
devig/: __init__.py  cli.py  core.py
