[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "devig"
version = "0.1.0"
description = "Remove the bookmaker margin (vig) from odds and get the fair line. Multiplicative, additive, power, Shin."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = []
keywords = ["betting", "odds", "vig", "overround", "devig", "fair-odds", "shin", "no-vig"]

[project.scripts]
devig = "devig.cli:main"

[tool.setuptools]
packages = ["devig"]
